--- a/src/components/Devices/Devices.css
+++ b/src/components/Devices/Devices.css
@@ -1,6 +1,7 @@
 
 .head_section {
     border-bottom: 1px solid #dfdfdf;
+    background: #f7f7f7;
 }
 
 .container {
